Added Inter-process Communication to prevent two instance running at the same time. + Small changes